Fix Interactive Session state tracking